# WebCrawler

./: .gitignore  CMakeLists.txt  Makefile  README.md  SQLAPI.h  Vagrantfile  config.h  crawler.cpp  crawler.h  database.cpp  database.h  databaseconnection.cpp  databaseconnection.h  dbconnectionpool.cpp  dbconnectionpool.h  how to get into database  install.sh  main.cpp  mainvoorbeeld.cpp  test.rb  threadpool.cpp  threadpool.h  url.cpp  url.h  webcurl.cpp  webcurl.h
dbquerystuff/: create.cpp
docs/: BUILD.md
